.labs/Local-Kubernetes/ml-pipeline/manifests/feast/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feast
spec:
  type: ClusterIP
  selector:
    app: feast
  ports:
    - name: http
      port: 8888
      targetPort: 8888
