.labs/Local-Kubernetes/ml-pipeline/manifests/feast/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feast
spec:
  ingressClassName: traefik
  rules:
    - host: feast.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feast
                port:
                  number: 8888
